--- a/src/App.css
+++ b/src/App.css
@@ -43,28 +43,40 @@ html {
 
 #heading {
   font-family: "Anderson Grotesk UltraBold", sans-serif;
-  background-image: url("Background8.png");
+  background-image: url("Background-Top.png");
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 275px;
-  color: white;
-  border-radius: 25px;
-  border-top:100vh;
+  /*height: 45vh;*/
+  color: rgb(247, 247, 247);
+  border-bottom-left-radius: 25px;
   margin-top:-23px;
   
 }
 
-
 #title{
-  padding-left: 25px;
-  padding-top: 110px;
-  font-size: 75px;
+  padding-left: 35px;
+  margin-top: 65px;
+  margin-bottom: 5px;
+  font-size: 73px;
+  display: inline-block;
+}
+
+#back-bottom{
+  width: 500px;
+  float:right;
+  margin-top: -0.5vh;
+  position:relative;
 }
 
 #subtitles{
-  
+  margin-left: 20px;
+  margin-right: -500px;
   color:black;
+  font-family: "Anderson Grotesk Bold";
+  font-size: 35px;
+  padding-top: 20px;
+  text-align:center;
 }
 
 body {
