--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,20 @@ html {
 #form{
   align-items: center;
   justify-content: center;
+  margin-bottom: 10px;
+  margin-top: 50px;
+}
+
+
+#info{
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 50px;
+  font-family: "Anderson Grotesk";
+  text-align:center;
+  font-size: 40px;
+  color:black;
 }
 
 #input{
@@ -93,7 +107,8 @@ html {
   font-family: "Anderson Grotesk";
   border-color: black;
   color:black;
-  border-width: 3px;
+  border-width: 1.5px;
+  border-color: gray;
 }
 
 #inputbutton{
@@ -101,22 +116,49 @@ html {
   height: 80px;
   width: 80px;
   margin-left: 25px;
-  border-color: rgb(255, 208, 0);
   border-width: 3px;
+  border-color: rgb(255,213,79);
+  --bs-btn-color: rgb(255,213,79);
+  --bs-btn-hover-color: white;
   --bs-btn-hover-bg: black;
-  --bs-btn-color: rgb(255, 208, 0);
-  --bs-btn-active-bg: black;
-  --bs-btn-hover-color: rgb(255, 208, 0);
+  --bs-btn-hover-border-color: rgb(255,255,255);
+  --bs-btn-active-bg: white;
+  --bs-btn-active-color: rgb(255,213,79);
 }
 
-#info{
-  margin-top: 80px;
-  margin-left: 200px;
-  margin-right: 200px;
+#SearchResults{
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left:50px;
+  padding-right: 50px;
+  /*width:100%;*/
   font-family: "Anderson Grotesk";
-  text-align:center;
+  text-align: center;
+  margin-top: 50px;
   font-size: 30px;
-  color:black;
+  border-radius: 50px;
+  margin-bottom: 200px;
+}
+
+#alert{
+  width:300px;
+  font-family: "Anderson Grotesk";
+  font-size: 25px;
+
+  margin-right: 50px;
+}
+
+.fade {
+  opacity: 0;
+  transition: opacity 0.1s ease-out;
+}
+
+.show {
+  opacity: 1;
+}
+
+.hide {
+  opacity: 0;
 }
 
 .container {
@@ -131,9 +173,18 @@ html {
   justify-content: center;
 }
 
-
-
 body {
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+input[type=text]::-ms-clear {  display: none; width : 0; height: 0; }
+input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+input:focus::placeholder {
+  color: transparent;
 }
