--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,10 @@ html {
   margin-right: 50px;
 }
 
+#chart{
+  font-size: 100px;
+}
+
 .fade {
   opacity: 0;
   transition: opacity 0.1s ease-out;
