Added a extra info box
Will add the python api fetchin soon

--- a/src/App.css
+++ b/src/App.css
@@ -153,9 +153,35 @@ html {
 
 #statistics{
   margin-left: 70px;
-  
 }
 
+#courseTitles{
+  text-align: center;
+  flex-wrap: wrap;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+#nextInfo{
+  height: 100vh;
+}
+
+#mainCard{
+  margin-left: 30px;
+  border: 2px solid rgb(9, 0, 131);
+  box-shadow: 2px 2px 0.5px 0.5px rgb(139, 135, 204);
+  border-radius: 20px;
+  width: 500px;
+  height: 450px;
+  margin-top:-20px;
+}
+
+#displayedInfo{
+  align-items: center;
+  justify-content: center;
+  position:relative;
+  display: flex; 
+}
 
 .fade {
   opacity: 0;
@@ -185,7 +211,6 @@ html {
 }
 
 body {
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
