--- a/src/App.css
+++ b/src/App.css
@@ -170,25 +170,29 @@ html {
   border-radius: 20px;
   width: 500px;
   height: 470px;
-  margin-top:-10px;
+  margin-top:10px;
 }
 
 #displayedInfo{
+  display: flex;
+  -webkit-flex-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
   justify-content: center;
   position:relative;
-  display: flex; 
+  flex-wrap: wrap; 
 }
 
 #returnButton{
   text-align: center;
-  position: relative;
-  top: 80px;
-  left: -400px;
+  position: relative;  
 }
 
 #backUpButton{
   font-size: 25px;
+  width: 200px;
+  border-radius: 20px;
 }
 
 .fade {
