added to the log!

--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ html {
   width: 53px;
   border-radius: 5px;
   margin-left: 10px;
-  margin-top: 25px;
+  margin-top: 4vh;
   border-width: 2px;
 }
 
