--- a/src/App.css
+++ b/src/App.css
@@ -225,6 +225,34 @@ html {
   border-width: 2px;
 }
 
+#facultyInfo{
+  height: 100vh;
+  margin-top: 50px;
+}
+
+#facultyStatsTitle{
+  text-align: center;
+  font-family: "Anderson Grotesk";
+  font-size: 55px;
+}
+
+#facultyStatsHeaderLine{
+  width: 80%;
+  box-shadow: 0px 0px .5px .5px grey;
+  margin: 1em 0;
+  padding: 0;
+  border: 1px solid;
+  border-color: black;
+  margin-left: 10vw;
+  margin-top: 0px;
+}
+
+.facultyStatsTitle{
+  font-family: "Anderson Grotesk";
+  font-size: 30px;
+  margin-top: 10px;
+}
+
 .fade {
   opacity: 0;
   transition: opacity 0.1s ease-out;
