--- a/src/facultyColors.css
+++ b/src/facultyColors.css
@@ -142,7 +142,7 @@
     background-color: rgb(139, 28, 167);
 }
 
-.NABackground{
+.NAFacBackground{
     background-color:black;
 }
 
@@ -362,11 +362,6 @@
 .WLUCard{
     border: 2px solid rgb(139, 28, 167);
     box-shadow: 0px 0px 1px 1px rgb(201, 120, 221);
-}
-
-.NACard{
-    box-shadow: 0px 0px 1px 1px rgb(107, 107, 107);
-    border: 2px solid  rgb(0, 0, 0);
 }
 
 .NAFacCard{
