--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,9 @@ html {
   box-sizing: border-box;
 }
 
-/*body{
+body{
   overflow-x: hidden; 
   overflow-y: hidden;
-}*/
-
-body {
-  overflow-x: hidden;
 }
 
 #heading {
@@ -59,9 +55,8 @@ body {
   color: rgb(247, 247, 247);
   border-bottom-left-radius: 25px;
   margin-top:-23px;
-  
 }
-
+/*
 #title{
   padding-left: 35px;
   margin-top: 65px;
@@ -78,10 +73,10 @@ body {
   text-align:center;
   font-size: 40px;
   color:black;
-}
+}*/
 
 #background{
-  background: url("./Images/Background-Top.png");
+  background: url("./Images/background.png.jpg");
   display: flex;
   height: 100vh;
   width: 100vw;
@@ -91,33 +86,103 @@ body {
 }
 
 #contain{
-  margin: 30px 30px 30px 30px;
+  margin: 4vh 2vw 4vh 2vw;
+  background: rgba(14, 14, 37, 0.75);
   width: 100%;
-  background: rgba(14, 14, 37, 0.9);
+  max-width: 96%;
+}
+
+#innerContainer{
+  margin: 6vh 2.6vw 0px 2.6vw;
+  height: 80vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-width: 90vw;
 }
 
 #info{
   text-align:center;
   font-size: 40px;
-  /*color:white;*/
+  color:white;
+  width: 80%;
+  transform: translate(10%);
+}
+
+#thing{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
 }
 
 #title{
-  font-size: 85px;
+  font-size: 90px;
   color: white;
   text-align: center;
   margin-top: px;
 }
 
-#innerContainer{
-  margin: 50px 50px 50px 50px;
-  overflow: auto;
-  height: 200vh;
+.personal{
+  color:rgb(216, 216, 216);
+  font-size: 17px;
+  text-align: left;
+  margin-left: 0px;
+  padding-left: 0px;
+  margin-top: auto;
 }
-/* width 
+/* width */
 ::-webkit-scrollbar {
   width: 0px;
-}*/
+}
+
+
+#input{
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 518px;
+  font-size: 30px;
+  height: 70px;
+  text-align:center;
+  color:white;
+  border-width: 1.5px;
+  background-color: rgba(0,0,0,0);
+  border-color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+  display:flex;
+  margin-left: auto;
+  border-radius: 20px;
+  box-shadow: none;
+}
+
+#input::placeholder {
+  color:white;
+  font-family: "Anderson Grotesk";
+  font-size: 30px;
+}
+
+#input:focus::placeholder {
+  color: transparent;
+  font-family: "Anderson Grotesk";
+}
+
+#inputbutton{
+  font-size: 35px;
+  height: 70px;
+  width: 70px;
+  margin-left: 25px;
+  border-width: 3px;
+  margin-top: 10px;
+  border-color: white;
+  --bs-btn-color: white;
+  --bs-btn-hover-bg: white;
+  --bs-btn-hover-border-color: rgba(0,0,0,0);
+  --bs-btn-hover-color: rgb(14,14,37);
+  --bs-btn-active-bg: transparent;
+  --bs-btn-active-color: white;
+  margin-right: auto;
+  margin-bottom: auto;
+}
 
 #back-bottom{
   width: 500px;
@@ -136,60 +201,29 @@ body {
 }
 
 #form{
-  margin-bottom: 10px;
-  margin-top: 50px;
+  margin-bottom: 20px;
+  /*margin-top: 50px;*/
+  margin-top: 20px;
   display:flex;
   align-items: center;
   position: relative;
 }
 
-#input{
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 518px;
-  font-size: 35px;
-  height: 80px;
-  text-align:center;
-  border-color: black;
-  color:black;
-  border-width: 2px;
-  border-color: gray;
-  justify-content: center;
-  align-items: center;
-  display:flex;
-  margin-left: auto;
-  border-radius: 20px;
-  
-}
-
-#inputbutton{
-  font-size: 35px;
-  height: 80px;
-  width: 80px;
-  margin-left: 25px;
-  border-width: 3px;
-  border-color: rgb(255,213,79);
-  --bs-btn-color: rgb(255,213,79);
-  --bs-btn-hover-color: white;
-  --bs-btn-hover-bg: black;
-  --bs-btn-hover-border-color: rgb(255,255,255);
-  --bs-btn-active-bg: white;
-  --bs-btn-active-color: rgb(255,213,79);
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+#stat{
+  margin-top: 100px;
 }
 
 #Buttons{
-  margin-top: 50px;
-  margin-bottom: 100px;
+  /*margin-top: 50px;*/
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 #SearchResults{
   margin-left: 10px;
   margin-right: 10px;
-  padding-left:50px;
-  padding-right: 50px;
+  padding-left: 45px;
+  padding-right: 45px;
   /*width:100%;*/
   text-align: center;
   font-size: 30px;
@@ -198,12 +232,19 @@ body {
 }
 
 #alert{
-  width:200px;
+  width: 200px;
   font-size: 25px;
   justify-content: center;
   align-items: center;
   margin-top: auto;
   margin-bottom: auto;
+  background-color: rgba(0,0,0,0);
+  height: 90%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: rgb(218, 110, 110);
+  border-radius: 20px;
+  border: solid 3px rgb(218, 110, 110);
 }
 
 #statistics{
@@ -227,14 +268,14 @@ body {
   margin-left: 40px;
   border-radius: 20px;
   width: 500px;
-  height: 400px;
+  height: 350px;
 }
 
 #mainCard2{
   margin-left: 40px;
   border-radius: 20px;
   width: 500px;
-  height: 400px;
+  height: 350px;
 }
 
 #courseDescriptionHeader{
@@ -261,10 +302,10 @@ body {
 }
 
 #backUpButton{
-  font-size: 25px;
-  width: 200px;
+  font-size: 23px;
+  width: 180px;
   border-radius: 20px;
-  margin-top: 4vh;
+  margin-top: 3vh;
 }
 #searchButton{
   margin-top: 20px;
@@ -272,16 +313,15 @@ body {
 }
 
 #searchCourseButton{
-  font-size: 25px;
+  font-size: 23px;
   width: 250px;
   border-radius: 20px;
   margin-left: -10vw;
   border-width: 2px;
 }
 
-
 #searchCourseButtonEnter{
-  font-size: 25px;
+  font-size: 23px;
   width: 53px;
   border-radius: 5px;
   margin-left: 10px;
@@ -319,13 +359,14 @@ body {
 }
 
 #courseHeading{
-  font-size:80px;
+  font-size:65px;
   margin-bottom: 0px;
   text-align: center;
 }
 
 #courseHeadingName{
-  font-size: 40px;
+  font-size: 30px;
+  margin-bottom: -5px;
 }
 
 #cardCode{
@@ -346,22 +387,22 @@ body {
 }
 
 #courseNumbers{
-  height: 340px;
+  height: 310px;
 }
 
 #cardCode{
-  font-size: 55px;
+  font-size: 45px;
   padding-left: 20px;
   padding-top: 10px;
 }
 
 #cardRatings{
-  font-size: 25px;
+  font-size: 20px;
   padding-left: 15px; 
 }
 
 #cardName{
-  font-size: 20px;
+  font-size: 17px;
   padding-left: 20px; 
   width: 460px;
   margin-top: -35px;
@@ -396,7 +437,6 @@ body {
 #recommendedTeacher{
   font-size: 35px;
   padding-left: 18px;
-
 }
 
 #courseDescriptionContainer{
@@ -404,7 +444,7 @@ body {
 }
 
 #ClickOnMe{
-  font-size: 28px;
+  font-size: 23px;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
@@ -415,7 +455,7 @@ body {
 
 .meter { 
   margin-left: 20px;
-  height: 20px;
+  height: 18px;
   position: relative;
   overflow: hidden;
   width:450px;
@@ -443,7 +483,7 @@ body {
 .cardHeaders {
   font-family: "Anderson Grotesk Bold";
   padding-left: 20px;
-  font-size: 25px;
+  font-size: 23px;
 }
 
 
@@ -497,4 +537,5 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 input:focus::placeholder {
   color: transparent;
+  font-family: "Anderson Grotesk";
 }
