--- a/src/facultyColors.css
+++ b/src/facultyColors.css
@@ -110,6 +110,10 @@
     color: rgb(183, 136, 194);
 }
 
+.NAFacLightDarkText{
+    color: white;
+}
+
 .ARTBackground{
     background-color: rgb(251 175 0);
 }
@@ -367,7 +371,6 @@
 
 #ARTinfo{
     color:rgb(251 175 0);
-    font-family: 'Anderson Grotesk';
     font-size: 15px; 
     margin-bottom:2px;
 }
@@ -375,25 +378,25 @@
 #ARTname{
     color:rgb(251 175 00);
     font-size: 18px;
-    width: 250px;
-    margin-bottom: 8px;    
+    width: 25   0px;
+    margin-bottom: 8px; 
+    line-height: 1.4;
 }
 
 #ARTcode{
     color:rgb(251 175 0);
     font-size: 25px;
     width: 250px;
-    font-family: 'Anderson Grotesk';
     padding-top: 10px;
     margin-bottom:-5px;
 }
 
 #ARTbox{
     background-color:rgb(14, 14, 37, 0.9);
-    width:270px;
-    padding-left:13px;
+    width: 270px;
+    padding-left: 13px;
     border: 1.5px solid rgb(251 175 0);
-    border-radius:5px;
+    border-radius: 5px;
 }
 
 #ENGinfo{
